force-app/main/default/objects/Opportunity/fields/Margin_Calc__c.field-meta.xml
<CustomField>
    <fullName>Margin_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Margin Calc</label>
    <type>Checkbox</type>
</CustomField>