force-app/main/default/objects/Opportunity/fields/Margin_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>Margin_Calc_Date__c</fullName>
    <label>Margin Calc Date</label>
    <type>Date</type>
</CustomField>