force-app/main/default/objects/Opportunity/fields/Margin_Calc_Link__c.field-meta.xml
<CustomField>
    <fullName>Margin_Calc_Link__c</fullName>
    <inlineHelpText>Add SharePoint link to Margin Calc</inlineHelpText>
    <label>Margin Calculator</label>
    <type>Url</type>
</CustomField>