force-app/main/default/objects/Opportunity/fields/Margin_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Margin_Calculator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a margin calculator has been completed for this opportunity</description>
    <label>Margin Calculator</label>
    <type>Checkbox</type>
</CustomField>