force-app/main/default/objects/Opportunity/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <description>This field captures which key milestones and deliverable of the Opportunity have been completed</description>
    <inlineHelpText>This field captures which key milestones and deliverable of the Opportunity have been completed</inlineHelpText>
    <label>Milestones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal - Standard</fullName>
            </value>
            <value>
                <fullName>Proposal - RFP</fullName>
            </value>
            <value>
                <fullName>Margin Calc</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
                <isActive>false</isActive>
                <label>MSA</label>
            </value>
            <value>
                <fullName>NDA</fullName>
                <isActive>false</isActive>
                <label>NDA</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <isActive>false</isActive>
                <label>Proposal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>