force-app/main/default/objects/Opportunity/fields/MNDA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>MNDA_Signed_Date__c</fullName>
    <label>MNDA Signed Date</label>
    <type>Date</type>
</CustomField>