force-app/main/default/objects/Opportunity/fields/Monetization_Ecosystem_Area__c.field-meta.xml
<CustomField>
    <fullName>Monetization_Ecosystem_Area__c</fullName>
    <description>The primary monetization ecosystem area for this opportunity. Depends on &quot;ATG Partners&quot; field. Adjustments to this picklist will directly affect Revenue Stream and Revenue Sub-Stream formulas.</description>
    <inlineHelpText>The primary monetization ecosystem area for this opportunity. Depends on &quot;ATG Partners&quot; field.</inlineHelpText>
    <label>Monetization Ecosystem Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ATG_Partners__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>BOSS – CPQ</fullName>
                <label>BOSS - CPQ</label>
            </value>
            <value>
                <fullName>BOSS - CPQ &amp; Billing</fullName>
            </value>
            <value>
                <fullName>BOSS – Sales Cloud</fullName>
                <label>BOSS - Sales Cloud</label>
            </value>
            <value>
                <fullName>CLM</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>CPQ &amp; Billing</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Middleware</fullName>
            </value>
            <value>
                <fullName>Q2C</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Sales Performance Management</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>- CRM</fullName>
                <isActive>false</isActive>
                <label>- CRM</label>
            </value>
            <value>
                <fullName>-- CLM</fullName>
                <isActive>false</isActive>
                <label>-- CLM</label>
            </value>
            <value>
                <fullName>-- CRM</fullName>
                <isActive>false</isActive>
                <label>-- CRM</label>
            </value>
            <value>
                <fullName>Billing - CPQ</fullName>
                <isActive>false</isActive>
                <label>Billing - CPQ</label>
            </value>
            <value>
                <fullName>CPQ &amp; Billing &amp; SpringCM CLM</fullName>
                <isActive>false</isActive>
                <label>CPQ &amp; Billing &amp; SpringCM CLM</label>
            </value>
            <value>
                <fullName>CPQ &amp; Conga CLM</fullName>
                <isActive>false</isActive>
                <label>CPQ &amp; Conga CLM</label>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
                <isActive>false</isActive>
                <label>Commerce Cloud</label>
            </value>
            <value>
                <fullName>Commission</fullName>
                <isActive>false</isActive>
                <label>Commission</label>
            </value>
            <value>
                <fullName>N/A_2</fullName>
                <isActive>false</isActive>
                <label>N/A_2</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
            <value>
                <fullName>Tax</fullName>
                <isActive>false</isActive>
                <label>Tax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>