force-app/main/default/objects/Opportunity/fields/Monthly_contract_value__c.field-meta.xml
<CustomField>
    <fullName>Monthly_contract_value__c</fullName>
    <label>Monthly contract value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>