force-app/main/default/objects/Opportunity/fields/MSA_Owner__c.field-meta.xml
<CustomField>
    <fullName>MSA_Owner__c</fullName>
    <inlineHelpText>Identify who&apos;s paper on which the MSA was signed</inlineHelpText>
    <label>MSA Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>Code Zero</fullName>
            </value>
            <value>
                <fullName>Cognizant</fullName>
            </value>
            <value>
                <fullName>Lev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>