force-app/main/default/objects/Opportunity/fields/Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Due_Date__c</fullName>
    <description>The date by which the next step will occur.</description>
    <inlineHelpText>The date by which the activities/tasks captured in the field, &quot;Next Steps&quot; will be complete</inlineHelpText>
    <label>Next Step Due Date</label>
    <type>Date</type>
</CustomField>