force-app/main/default/objects/Opportunity/fields/Next_Steps_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Long_Text__c</fullName>
    <description>Next steps needed for this opportunity.</description>
    <inlineHelpText>Next steps needed for this opportunity.</inlineHelpText>
    <label>Next Steps</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>