force-app/main/default/objects/Opportunity/fields/Non_ATG_RFR__c.field-meta.xml
<CustomField>
    <fullName>Non_ATG_RFR__c</fullName>
    <description>This field is system generated and calculated the difference between the values in the fields, Amount &amp; ATG RFR (Amount - ATG RFR = Non ATG RFR)</description>
    <formula>Amount - ATG_RFR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Captures the dollar amount of services that will be staffed and delivered by Non-ATG Resources. (e.g. AIM, CTS Global Salesforce Practice, SAP, Oracle)</inlineHelpText>
    <label>Non-ATG RFR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>