force-app/main/default/objects/Opportunity/fields/Opp_Description_last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Description_last_Modified_Date__c</fullName>
    <description>Field to be stamped with the last time a</description>
    <label>Opp Description last Modified Date</label>
    <type>DateTime</type>
</CustomField>