force-app/main/default/objects/Opportunity/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <defaultValue>&quot;1. ATG Deal Strategy – What/how are we positioning services?:&quot; &amp; BR()&amp; BR()&amp;
&quot;2. Account Pull Through – Cross sell? Other divisions?:&quot; &amp; BR()&amp; BR()&amp;
&quot;3. Opportunity for Success – Unique attribute or risk around client environment (SI takeover)?:&quot; &amp; BR()&amp; BR()&amp;
&quot;4. Partner Dynamics – Priority? Deal Strategy?:&quot; &amp; BR()&amp; BR()&amp;
&quot;5. Compelling Event – What are the business drivers?:&quot; &amp; BR()&amp; BR()&amp;
&quot;6. Competitive Landscape – Technology? Services?:&quot; &amp; BR()&amp; BR()&amp;
&quot;7. Budget – Has it been approved? Amount?:&quot; &amp; BR()&amp; BR()&amp; 
&quot;8. Rates – Whole rates?:&quot; &amp; BR()&amp; BR()&amp; 
&quot;9. Staffing – Onshore, Offshore, or mix 80/20?:&quot; &amp; BR()&amp; BR()&amp;
&quot;10. IP and/or Accelerators?:&quot; &amp; BR()&amp; BR()&amp;
&quot;11. Cognizant Footprint – Existing relationship? Cognizant Priority?:&quot; &amp; BR()</defaultValue>
    <description>Overview of the account, services they are seeking, and deal strategy</description>
    <inlineHelpText>Overview of the account, services they are seeking, and deal strategy</inlineHelpText>
    <label>Opportunity Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>