force-app/main/default/objects/Opportunity/fields/Opportunity_SOW_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SOW_Status__c</fullName>
    <description>Identifies of current active opportunity&apos;s SOW status as Green, Yellow or Red</description>
    <inlineHelpText>Denotes at which stage is SOW is in across the contract lifecycle. This is used in staffing.</inlineHelpText>
    <label>Opportunity SOW Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
            </value>
            <value>
                <fullName>Redlines</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Sent for Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>