force-app/main/default/objects/Opportunity/fields/Opportunity_Stage_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Date_Change__c</fullName>
    <label>Opportunity Stage Date Change</label>
    <type>Date</type>
</CustomField>