force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>This field captured the type of opportunity</description>
    <inlineHelpText>Values pulled directly from WinZone</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business - Inaugural Work with an Account</fullName>
            </value>
            <value>
                <fullName>Existing Business - Net New Services with an Existing Account</fullName>
            </value>
            <value>
                <fullName>Existing Business - Scope Expansion / Team Extension on Existing Project</fullName>
            </value>
            <value>
                <fullName>Change Request - Timeline / Budget Remediation</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Expansion and Competitive</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New and Competitive</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal and Competitive</fullName>
            </value>
            <value>
                <fullName>Expansion with Date Change</fullName>
            </value>
            <value>
                <fullName>Expansion with New Project</fullName>
            </value>
            <value>
                <fullName>Renewal with new Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>