force-app/main/default/objects/Opportunity/fields/Opportunity_Update_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Update_Last_Modified__c</fullName>
    <description>Field to be stamped via workflow rule that captures the last day that the Opportunity Update field was modifed.</description>
    <inlineHelpText>Used for reporting. Stamped via workflow rule</inlineHelpText>
    <label>Opportunity Update Last Modified</label>
    <type>DateTime</type>
</CustomField>