force-app/main/default/objects/Opportunity/fields/OrgChartPlus__LastOCPExport__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__LastOCPExport__c</fullName>
    <description>URL of last OrgChartPlus image export</description>
    <label>Last OCP Export</label>
    <type>Url</type>
</CustomField>