force-app/main/default/objects/Opportunity/fields/Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity__c</fullName>
    <inlineHelpText>Data pulled from WinZone to relate this Change Order to the Original Opportunity. Name is value in WinZone</inlineHelpText>
    <label>Original Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>