force-app/main/default/objects/Opportunity/fields/Original_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_ID__c</fullName>
    <description>Contains the record ID of the opportunity this record was originally cloned from. Will be the same as the record ID if this opportunity is not a cloned opportunity.</description>
    <inlineHelpText>Contains the record ID of the opportunity this record was originally cloned from. Will be the same as the record ID if this opportunity is not a cloned opportunity.</inlineHelpText>
    <label>Original Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>