force-app/main/default/objects/Opportunity/fields/P_L__c.field-meta.xml
<CustomField>
    <fullName>P_L__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If marked true, this field denotes an opportunity and it&apos;s associated revenue are showing up on ATG&apos;s P&amp;L. The field will be maintained monthly by the Sales Operations Team.</description>
    <inlineHelpText>If marked true, this field denotes an opportunity and it&apos;s associated revenue are showing up on ATG&apos;s P&amp;L. The field will be maintained monthly by the Sales Operations Team.</inlineHelpText>
    <label>P&amp;L</label>
    <type>Checkbox</type>
</CustomField>