force-app/main/default/objects/Opportunity/fields/Partner_Lead__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead__c</fullName>
    <description>Partner Lead # once entered into Partner Portal</description>
    <inlineHelpText>Partner Lead # once entered into Partner Portal</inlineHelpText>
    <label>Partner Lead #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>