force-app/main/default/objects/Opportunity/fields/Partner_LOE__c.field-meta.xml
<CustomField>
    <fullName>Partner_LOE__c</fullName>
    <description>Denotes how active the partner is on this opportunity. None = No Rep engaged, Minimal = Rep. is known, but not active, Moderate = Rep is known and active on account but not driving, High = Rep is known, very active, and driving account</description>
    <inlineHelpText>Denotes how active the partner is on this opportunity. None = No Rep engaged, Minimal = Rep. is known, but not active, Moderate = Rep is known and active on account but not driving, High = Rep is known, very active, and driving opportunity</inlineHelpText>
    <label>Partner LOE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None,</fullName>
            </value>
            <value>
                <fullName>Minimal,</fullName>
            </value>
            <value>
                <fullName>Moderate,</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>