force-app/main/default/objects/Opportunity/fields/Partner_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Partner_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Revenue</label>
    <type>Checkbox</type>
</CustomField>