force-app/main/default/objects/Opportunity/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Registered</fullName>
                <default>true</default>
                <label>Not Yet Registered</label>
            </value>
            <value>
                <fullName>Sourced Lead</fullName>
            </value>
            <value>
                <fullName>Joint Sales</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Not Registered - No License Impacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>