force-app/main/default/objects/Opportunity/fields/Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One__c</fullName>
    <description>Will always return a value of &quot;1&quot; used for reporting. Do not adjust or alter.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Will always return a value of &quot;1&quot; used for reporting. Do not adjust or alter.</inlineHelpText>
    <label>Power of One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>