force-app/main/default/objects/Opportunity/fields/Practice_Lead_Filter__c.field-meta.xml
<CustomField>
    <fullName>Practice_Lead_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>createded For Elena Merril and SF PL team</description>
    <label>Practice Lead Filter</label>
    <type>Checkbox</type>
</CustomField>