force-app/main/default/objects/Opportunity/fields/Pre_Existing__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workflow rule triggering.</description>
    <label>Pre-Existing</label>
    <type>Checkbox</type>
</CustomField>