force-app/main/default/objects/Opportunity/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <inlineHelpText>Populated via WinZone data pull</inlineHelpText>
    <label>Primary Competitor</label>
    <length>200</length>
    <type>Text</type>
</CustomField>