force-app/main/default/objects/Opportunity/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Fit is based off of Budget, Compelling Events of the client, Company Overview, and the Project Overview.</inlineHelpText>
    <label>SE Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5</valueSetName>
    </valueSet>
</CustomField>