force-app/main/default/objects/Opportunity/fields/Product_Being_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Product_Being_Replaced__c</fullName>
    <label>Product Being Replaced</label>
    <length>60</length>
    <type>Text</type>
</CustomField>