force-app/main/default/objects/Opportunity/fields/Product_Other__c.field-meta.xml
<CustomField>
    <fullName>Product_Other__c</fullName>
    <description>To be populated when the value, &quot;Other&quot; is selected in the field titled &quot;Products Involved&quot;</description>
    <inlineHelpText>To be populated when the value, &quot;Other&quot; is selected in the field titled &quot;Products Involved&quot;</inlineHelpText>
    <label>Product Other</label>
    <type>TextArea</type>
</CustomField>