force-app/main/default/objects/Opportunity/fields/Products_Involved__c.field-meta.xml
<CustomField>
    <fullName>Products_Involved__c</fullName>
    <description>The products that are being positioned as part of this opportunity</description>
    <inlineHelpText>The products that are being positioned as part of this opportunity</inlineHelpText>
    <label>Products Involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Commerce Lightning</fullName>
            </value>
            <value>
                <fullName>B2B Commerce v1</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>CLM</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>CPQ+</fullName>
            </value>
            <value>
                <fullName>Custom Development</fullName>
            </value>
            <value>
                <fullName>Einstein</fullName>
            </value>
            <value>
                <fullName>Enosix</fullName>
            </value>
            <value>
                <fullName>Lightning Migration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PSA</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>