force-app/main/default/objects/Opportunity/fields/Project_Closure_Count__c.field-meta.xml
<CustomField>
    <fullName>Project_Closure_Count__c</fullName>
    <description>Project Closure Count is used in validation rule to ensure a Project Closure Reason is provided when a stage moved to closed status (Dead, On hold, Closed Lost)</description>
    <inlineHelpText>Project Closure Count is used in validation rule to ensure a Project Closure Reason is provided when a stage moved to closed status (Dead, On hold, Closed Lost)</inlineHelpText>
    <label>Project Closure Count</label>
    <summaryForeignKey>Opportunity_Closure__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>