force-app/main/default/objects/Opportunity/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Will be used for SOW Naming Conventions.</description>
    <inlineHelpText>Will be used for SOW Naming Conventions.</inlineHelpText>
    <label>Project Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>