force-app/main/default/objects/Opportunity/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <description>Project Duration (in weeks).</description>
    <inlineHelpText>Captured the quantity of weeks that are in scope for this project (i.e. 30). This field is used to calculate the Monthly Revenue Run Rate to support Forecasting</inlineHelpText>
    <label>Project Duration (Weeks)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>