force-app/main/default/objects/Opportunity/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>The Project ID is populated in WinZone and can be sourced from the corresponding WinZone Opportunity. The Project ID is the ID to which associated on project bill their time.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Project ID is populated in WinZone and can be sourced from the corresponding WinZone Opportunity. The Project ID is the ID to which associated on project bill their time.</inlineHelpText>
    <label>Project ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>