force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>Project type for this opportunity. Depends on the &quot;Monetization Ecosystem Area&quot; field. Adjustments to this picklist will directly affect Revenue Stream and Revenue Sub-Stream formulas.</description>
    <inlineHelpText>Project type for this opportunity. Depends on the &quot;Monetization Ecosystem Area&quot; field.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Monetization_Ecosystem_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Transformation</fullName>
            </value>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>MVP</fullName>
            </value>
            <value>
                <fullName>Design Phase</fullName>
            </value>
            <value>
                <fullName>Build Phase</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Application Support</fullName>
            </value>
            <value>
                <fullName>Staff Augmentation</fullName>
            </value>
            <value>
                <fullName>Enablement - Methodology &amp; Tools</fullName>
            </value>
            <value>
                <fullName>Enablement - For Fee Training</fullName>
            </value>
            <value>
                <fullName>Product/IP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Expert Services</fullName>
                <isActive>false</isActive>
                <label>Expert Services</label>
            </value>
            <value>
                <fullName>Managed Services</fullName>
                <isActive>false</isActive>
                <label>Managed Services</label>
            </value>
            <value>
                <fullName>Production Success</fullName>
                <isActive>false</isActive>
                <label>Production Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>