force-app/main/default/objects/Opportunity/fields/Proposal_Creation__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Creation</label>
    <type>Checkbox</type>
</CustomField>