force-app/main/default/objects/Opportunity/fields/Referring_Employee__c.field-meta.xml
<CustomField>
    <fullName>Referring_Employee__c</fullName>
    <description>Field to capture the name of an employee who refers us into an opportunity. If opportunity is closed/won, employee will be eligable for the referral bonus.</description>
    <label>Referring Employee</label>
    <length>75</length>
    <type>Text</type>
</CustomField>