force-app/main/default/objects/Opportunity/fields/Referring_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner__c</fullName>
    <label>Referring Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>